<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_statement"
        android:orderInCategory="100"
        android:title="@string/menu_statement"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_condition"
        android:orderInCategory="100"
        android:title="@string/menu_condition"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/menu_calendar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
