<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StatementContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/statementType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="20dp"
        android:padding="7dp"
        android:text="@string/type_of_cell_therapy"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:background="#D3E0FF"/>

    <Spinner
        android:id="@+id/typeOfCellTherapy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_cell_therapy" />

    <Spinner
        android:id="@+id/numberOfCellTherapy"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department_of_TGSK" />

    <Spinner
        android:id="@+id/departmentTGSK"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optimal_period_of_cell_therapy" />

    <Spinner
        android:id="@+id/mountOptimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/yearOptimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planing_date_of_cell_therapy" />

    <Spinner
        android:id="@+id/planingMount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/planingYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_cell_therapy" />

    <EditText
        android:id="@+id/dateTherapy"
        style="@style/statementElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <TextView
        style="@style/statementElement"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_hospitalization_CART" />

    <EditText
        style="@style/statementElement"
        android:id="@+id/dateHospitalizationCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonSaveStatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_button"
        android:textColor="@color/colorWhite"
        android:padding="7dp"
        android:layout_margin="20dp"
        android:text="@string/save" />


</LinearLayout>