<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/menu_statement"
        android:textColor="@color/colorBlack"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/quantity_statement"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">


            <Button
                android:id="@+id/createNewStatementButton"
                style="@style/MainActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_name_create" />

            <Button
                android:id="@+id/filterButton"
                style="@style/MainActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_filter" />

            <Button
                android:id="@+id/reportButton"
                style="@style/MainActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_report" />

            <Button
                android:id="@+id/exportButton"
                style="@style/MainActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_export" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listStatementMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"/>

</LinearLayout>