<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_margin="15dp"
        android:textColor="#080022">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@mipmap/logo">

    </View>

    <EditText
        android:id="@+id/userLogin"
        style="@style/donors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_margin="10dp"
        android:background="#D8EBFF"
        android:textColor="#080022"
        android:hint="@string/user_login" />


    <EditText
        android:id="@+id/userPassword"
        style="@style/donors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_margin="10dp"
        android:background="#D8EBFF"
        android:textColor="#080022"
        android:hint="@string/user_password" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_enter"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:background="#080022"/>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc"
        android:layout_gravity="center"
        android:textSize="10sp"
        android:layout_marginBottom="10dp"
        android:textColor="#080022">
    </TextView>

</LinearLayout>