<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        style="@style/DialogCreateElement"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_type_statement"
        android:textSize="20sp" />

    <TextView
        style="@style/DialogCreateElement"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_statement"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/typeOfCellTherapy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/dialogCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/dialog_button"
        android:textColor="@color/colorWhite"
        android:text="@string/button_name_create" />

</LinearLayout>